--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/node": "^20.6.1",
     "prettier": "^3.0.3",
+    "prisma": "^5.3.1",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
   },
