--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "tsx watch src/server.ts"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/node": "^20.6.1",
     "prettier": "^3.0.3",
@@ -22,5 +25,8 @@
     "fastify": "^4.23.2",
     "openai": "^4.7.1",
     "zod": "^3.22.2"
+  },
+  "engines": {
+    "node": "^18.15.x"
   }
 }
