--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "ai": "^2.2.12",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.2",
+    "i18next": "^23.5.1",
     "openai": "^4.7.1",
+    "react-i18next": "^13.2.2",
     "zod": "^3.22.2"
   },
   "engines": {
