--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "build": "tsup src",
+    "start": "node dist/server.js"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -24,6 +26,7 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.23.2",
     "openai": "^4.7.1",
+    "tsup": "^7.2.0",
     "zod": "^3.22.2"
   },
   "engines": {
